--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "express-session": "^1.17.2",
     "hbs": "^4.1.2",
     "mongoose": "^6.0.12",
+    "multer": "^1.4.3",
     "passport": "^0.5.0",
     "passport-local": "^1.0.0"
   }
